Partial project layout update, not breaking build but disabling javafx and android